transition to HS

--- a/src/online-application/templates/index.html
+++ b/src/online-application/templates/index.html
@@ -13,16 +13,16 @@
     <section class="mood">
         <div class="row">
             <div class="col text-center"> 
-                <div class="mood-percentage">[[ happy ]]%</div>
-                <div>Happy</div> 
+                <div class="mood-percentage">[[ hateful ]]%</div>
+                <div>hateful</div> 
             </div>
             <div class="col text-center">
                 <div class="mood-percentage">[[ neutral ]]%</div>
                 <div>Neutral</div> 
             </div>
             <div class="col text-center"> 
-                <div class="mood-percentage">[[ sad ]]%</div>
-                <div>Sad</div> 
+                <div class="mood-percentage">[[ offensive ]]%</div>
+                <div>offensive</div> 
             </div>
         </div>
     </section>
