--- a/src/online-application/templates/index.html
+++ b/src/online-application/templates/index.html
@@ -7,7 +7,7 @@
     </header> -->
     <main class="content">         
        <div class="content-text">
-          An Online Multi Lingual Hate Speech Recoginition System<br/>
+          An Online Multi Lingual Hate Speech Recognition System<br/>
         </div>
     </main>
     <section class="mood">
